Se agregaron 2 simulaciones, en eje Z, y boxeador

--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
       "El nombre en la simulacion de la junta revoluta del eslabon 1 debe ser \"eslabon_1\"\n",
       "El nombre en la simulacion de la junta revoluta del eslabon 2 debe ser \"eslabon_2\"\n",
       "El nombre en la simulacion de la junta prismatica de la corredera debe ser \"Corredera\", limite minimo : 0 mts, limite maximo 0.3\n",
-      "El nombre en la simulacion de la junta prismatica del efector final debe ser \"junta_efector\"\", limite minimo : -0.04 mts, limite maximo 0.04\n",
+      "El nombre en la simulacion de la junta prismatica del efector final debe ser \"junta_efector\"\", limite minimo : -0.04 mts, limite maximo 0\n",
       "El nombre en la simulacion del dummy para obtner posciones finales como comprobacion es \"posicion_final\"\n"
      ]
     }
@@ -154,7 +154,7 @@
     "#Valores de los rangos minimos y maximos de juntas prismaticas (en metros) dado que las funciones se encargan\n",
     "#de transformar en decimales necesarios \n",
     "min_corredera,max_corredera = [0,0.3]\n",
-    "min_efector,max_efector = [-0.04,0.04]\n",
+    "min_efector,max_efector = [-0.04,0]\n",
     "\n",
     "print(f'El nombre en la simulacion de la junta revoluta del eslabon 1 debe ser \"{nombre_junta_eslabon_1}\"')\n",
     "print(f'El nombre en la simulacion de la junta revoluta del eslabon 2 debe ser \"{nombre_junta_eslabon_2}\"')\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,6 @@
     "#Para esta configuracion distancia debe ir de 'min_corredera' hasta 'max_corredera' en el caso de la corredera\n",
     "distancia = 0\n",
     "#Para esta configuracion distancia debe ir de 'min_efector' hasta 'max_efector' en el caso del efector final\n",
-
     "distancia_efector = -0.040 \n",
     "\n",
     "retCode = sim.simxSetJointTargetPosition(clientID, corredera,distancia, sim.simx_opmode_oneshot)\n",
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,12 +320,11 @@
     "    \"\"\"\n",
     "    mover_junta_prismatica(corredera,min_corredera)\n",
     "\n",
-    "\n",
     "def arriba_corredera():\n",
     "    \"\"\"\n",
     "    Envia la corredera a su posicion maxima, en el eje Z.\n",
     "    \"\"\"\n",
-    "    mover_junta_prismatica(corredera,min_corredera)\n",
+    "    mover_junta_prismatica(corredera,max_corredera)\n",
     "\n",
     "def abrir_efector():\n",
     "    \"\"\"\n",
@@ -389,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +422,7 @@
        "(theta, alpha, a, d)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +459,7 @@
        "[         0,                      0,                      0,            1]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +529,7 @@
        "(l1, d1, theta2, d2, theta3, d3, l4)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +581,7 @@
        "[0, 0, 0,  1]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 216,
    "metadata": {
     "scrolled": true
    },
@@ -621,7 +619,7 @@
        "[          0,            0, 0,              1]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +655,7 @@
        "[          0,            0, 0,              1]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +691,7 @@
        "[0, 0, 0,  1]])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +727,7 @@
        "[                                                 0,                                                  0, 0,                                                                             1]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +758,7 @@
        "[                   0,                     0, 0,                                             1]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +799,7 @@
        "[                                      l1 + l4]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1012,7 @@
        "Matrix([[0.2*cos(135) + 0.2*cos(90) + 0.18801, 0.2*sin(135) + 0.2*sin(90), 0.3796]])"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,26 +1045,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[ 0.025860225781798363, \\  0.3482555150985718, \\  0.37556636333465576\\right]$"
+       "$\\displaystyle \\left[ 0.5646095871925354, \\  -0.010611959733068943, \\  0.1200198233127594\\right]$"
       ],
       "text/plain": [
-       "[0.025860225781798363, 0.3482555150985718, 0.37556636333465576]"
+       "[0.5646095871925354, -0.010611959733068943, 0.1200198233127594]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Obtenemos la posicion real del efector fin en la simulacion, del dummy , [x,y,z] respectivamente\n",
-    "pos_sim = get_posicion_dummy()[1]\n",
+    "pos_sim = get_posicion_dummy()\n",
+    "pos_sim = pos_sim[1]\n",
     "pos_sim"
    ]
   },
@@ -1079,19 +1078,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error absoluto en X : -0.162149774218202 - 0.2*cos(90) - 0.2*cos(135)\n",
-      "Error absoluto en Y : -0.2*sin(90) - 0.2*sin(135) + 0.348255515098572\n",
-      "Error absoluto en Z : 0.00403363666534423\n",
-      "Error del valor calculado con respecto al real en X, es de : -627.023814820404 - 773.388452550826*cos(90) - 773.388452550826*cos(135) %\n",
-      "Error del valor calculado con respecto al real en Y, es de : -773.388452550826*sin(90) - 773.388452550826*sin(135) + 1346.68396957188 %\n",
-      "Error del valor calculado con respecto al real en Z, es de : 15.5978400938142 %\n"
+      "Error absoluto en X : -0.18801 - 0.2*cos(90) - 0.2*cos(135)\n",
+      "Error absoluto en Y : 0.2*sin(135) + 0.2*sin(90)\n",
+      "Error absoluto en Z : 0.379600000000000\n",
+      "Error del valor calculado con respecto al real en X, es de : zoo %\n",
+      "Error del valor calculado con respecto al real en Y, es de : zoo %\n",
+      "Error del valor calculado con respecto al real en Z, es de : zoo %\n"
      ]
     }
    ],
@@ -1123,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,20 +1139,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simulacion 1.- Juego de coordenadas preestablecidas"
+    "### Simulacion 1.- Juego de coordenadas preestablecidas, eslabones 1 y 2 en plano XY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conectado a 19999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conectamos a coppelia\n",
+    "clientID = connect(19999)\n",
+    "\n",
+    "#Esta rutina mueve en zigzag el eslabon 2 , sobre la junta con eslabon 1\n",
+    "def mover_eslabon_2_sobre_junta(angulo_eslabon_1):\n",
+    "    #Movemos el robot con eslabon 1 : 90 °, eslabon 2 : -90 °, Corredera eleada hasta : 0 mm , Posicion de efector final :0 mm\n",
+    "    mover_robot_cinematica_directa(angulo_eslabon_1,-90,0,0)\n",
+    "    #Espera segundos antes del proximo movimiento\n",
+    "    delay(1)\n",
+    "    mover_robot_cinematica_directa(angulo_eslabon_1,90,0,0)\n",
+    "    #Espera segundos antes del proximo movimiento\n",
+    "    delay(1)\n",
+    "    mover_robot_cinematica_directa(angulo_eslabon_1,-90,0,0)\n",
+    "    #Espera segundos antes del proximo movimiento\n",
+    "    delay(1)\n",
+    "    mover_robot_cinematica_directa(angulo_eslabon_1,90,0,0)\n",
+    "    #Espera segundos antes del proximo movimiento\n",
+    "    delay(1)\n",
+    "    \n",
+    "#Inicia la rutina.\n",
+    "def rutina_1():\n",
+    "    #Movemos el robot con eslabon 1 : 90 °, eslabon 2 : 0 °, Corredera eleada hasta : 0 mm , Posicion de efector final :0 mm\n",
+    "    mover_robot_cinematica_directa(90,0,0,0)\n",
+    "    #Espera 2 segundos antes del proximo movimiento\n",
+    "    delay(2)\n",
+    "    #Rutina pre diseñada\n",
+    "    mover_eslabon_2_sobre_junta(90)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #Movemos el robot con eslabon 1 : -90 °, eslabon 2 : 0 °, Corredera eleada hasta : 0 mm , Posicion de efector final :0 mm\n",
+    "    mover_robot_cinematica_directa(-90,0,0,0)\n",
+    "    #Espera 2 segundos antes del proximo movimiento\n",
+    "    delay(2)\n",
+    "    #Rutina pre diseñada\n",
+    "    mover_eslabon_2_sobre_junta(-90)\n",
+    "\n",
+    "\n",
+    "    #Movemos el robot con eslabon 1 : -90 °, eslabon 2 : 0 °, Corredera eleada hasta : 0 mm , Posicion de efector final :0 mm\n",
+    "    mover_robot_cinematica_directa(0,0,0,0)\n",
+    "    #Espera 2 segundos antes del proximo movimiento\n",
+    "    delay(2)\n",
+    "    #Rutina pre diseñada\n",
+    "    mover_eslabon_2_sobre_junta(0)\n",
+    "\n",
+    "    #Regresamos el robot a su posicion inicial, por defecto\n",
+    "    delay(1)\n",
+    "    reiniciar_robot()\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mover_robot_cinematica_directa(90,-90,0,0)\n",
-    "delay(2)\n",
-    "mover_robot_cinematica_directa(-90,45,0,0)\n",
-    "delay(2)\n",
-    "mover_robot_cinematica_directa(45,-45,0.1,0.04)"
+    "rutina_1()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulacion 2.- Plano XY agregar movimiento en Z\n",
+    "\n",
+    "Se realiza un dezplazamiento en Z, a la par que se realiza la rutina 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conectamos a coppelia\n",
+    "clientID = connect(19999)\n",
+    "\n",
+    "arriba_corredera()\n",
+    "delay(5)\n",
+    "abajo_corredera()\n",
+    "rutina_1()\n",
+    "arriba_corredera()\n",
+    "delay(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulacion 3.- 'Boxeador'\n",
+    "\n",
+    "Se realiza un dezplazamiento en Z, a la par que se realiza una rutina diferente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conectado a 19999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conectamos a coppelia\n",
+    "clientID = connect(19999)\n",
+    "\n",
+    "#Sube hasta lo mas alto la corredera\n",
+    "arriba_corredera()\n",
+    "delay(10)\n",
+    "\n",
+    "#Rutina 'Boxeo'\n",
+    "i = 0\n",
+    "while i < 10 :\n",
+    "    mover_robot_cinematica_directa(-90,90,0,0)\n",
+    "    delay(0.8)\n",
+    "    mover_robot_cinematica_directa(90,-90,0,0)\n",
+    "    delay(0.8)\n",
+    "    i = i + 1"
    ]
   }
  ],
